security updates (#108)
